Fix use card text alignment

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -544,11 +544,18 @@ button {
 
 .use-case-top-group,
 .use-case-bottom-group {
-  align-items: center;
   display: flex;
   flex-direction: column;
   gap: 32px;
   width: 100%;
+}
+
+.use-case-top-group {
+  align-items: center;
+}
+
+.use-case-bottom-group {
+  align-items: flex-start;
 }
 
 .use-case-card h3 {
@@ -652,7 +659,7 @@ button {
 }
 
 .use-case-description {
-  align-self: center;
+  align-self: flex-start;
   color: var(--text-secondary);
   font-size: 16px;
   line-height: 1.4;
